# gitsmith

./: .gitignore  Cargo.toml  MCP_SETUP.md  README.md  flake.nix  gitsmith.sh  test.sh
.githooks/: pre-push
.github/workflows/: release-binaries.yml  release.yml  rust.yml
gitsmith/: Cargo.toml
gitsmith-core/: Cargo.toml
gitsmith-core/src/: account.rs  events.rs  lib.rs  patches.rs  pull_request.rs  repo.rs  types.rs
gitsmith-integration-tests/: Cargo.toml  relay-config-7879.toml  relay-config.toml  strfry-config.conf
gitsmith-integration-tests/src/: cli.rs  main.rs  relay.rs
gitsmith-integration-tests/src/helpers/: assertions.rs  mod.rs  relay_verification.rs  runner.rs  setup.rs  types.rs
gitsmith-integration-tests/src/tests/: account.rs  mod.rs  public_relay.rs  pull_request.rs  repository.rs  sync.rs
gitsmith/src/: main.rs  mcp_server.rs
gitsmith/src/commands/: account.rs  list.rs  mod.rs  send.rs  sync.rs
gitsmith/tests/: mcp_integration_test.rs
