[package]
name = "gitsmith-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Nostr SDK
nostr = "0.43.0"
nostr-sdk = "0.43.0"

# Git operations
git2 = "0.20.2"

# Crypto
sha2 = "0.10.9"
hex = "0.4.3"