[package]
name = "gitsmith-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }

# Nostr SDK
nostr = "0.43.1"
nostr-sdk = "0.43.0"

# Git operations
# Use vendored-openssl to avoid system OpenSSL dependency
git2 = { version = "0.20.2", features = ["vendored-openssl"] }

# Crypto
sha2 = "0.10.9"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"

# Utils
dirs = "5.0"
chrono = "0.4"
futures = "0.3"

# Logging
tracing = "0.1"