[package]
name = "gitsmith-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gitsmith-integration-tests"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.41", features = ["derive", "env"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
uuid = { version = "1.6", features = ["v4"] }
colored = "2.1"
regex = "1.10"