[package]
name = "gitsmith"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gitsmith"
path = "src/main.rs"

[dependencies]
gitsmith-core = { path = "../gitsmith-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nostr-sdk = "0.43.0"
rpassword = "7.3"
futures = "0.3"
chrono = "0.4"

# CLI
clap = { version = "4.5.41", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP Server
rmcp = { version = "0.6", features = ["server", "transport-io"] }
schemars = "1.0"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
rmcp = { version = "0.6", features = ["server", "client", "transport-child-process"] }
tokio = { version = "1.47", features = ["full", "test-util", "process"] }